--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -1,93 +1,103 @@
 .navbar {
-    width: 100%;
-    padding: 0 30px;
-    @include df;
-    justify-content: space-between;
+  width: 100%;
+  padding: 0 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-    &__list {
-        width: 30%;
-        @include df;
-        justify-content: start;
-        gap: 36px;
+  &__logo img {
+    width: 120px;
+    height: auto;
+  }
+
+  &__list {
+    display: flex;
+    gap: 36px;
+    transition: all 0.3s ease;
+
+    &.show {
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 70px;
+      left: 0;
+      width: 100%;
+      background: #fff;
+      padding: 20px 0;
+      gap: 20px;
+      align-items: center;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    }
+  }
+
+  &__item {
+    font-size: 14px;
+    font-weight: 500;
+    color: #333;
+    cursor: pointer;
+    transition: color 0.2s;
+
+    &:hover {
+      color: #007bff;
+    }
+  }
+
+  &__icons {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+    &__text {
+      display: flex;
+      gap: 20px;
+
+      p {
+        font-size: 13px;
+        color: #333;
+      }
     }
 
-    &__item {
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 21px;
-        color: $textcolor;
-    }
+    &__icon {
+      display: flex;
+      gap: 15px;
 
-    &__logo {
-        width: 30%;
-        @include df;
-
-        img {
-            width: 120px;
-            height: 38px;
-        }
-    }
-
-    &__icons {
-        width: 30%;
-        @include df;
-        justify-content: right;
-        gap: 20px;
-    }
-
-    &__icons__text {
-        @include df;
-        gap: 40px;
-
-        p {
-            font-size: 12px;
-            line-height: 21px;
-            font-weight: 400;
-            color: $textcolor;
-        }
-    }
-
-    &__icons__icon {
-        @include df;
-        gap: 20px;
-    }
-
-    &__burger {
-        display: none;
-        flex-direction: column;
+      i {
+        font-size: 16px;
         cursor: pointer;
+        transition: color 0.2s;
 
-        div {
-            width: 25px;
-            height: 2.5px;
-            background: #000;
-            transition: 0.3s;
-            margin: 3px 0;
-
+        &:hover {
+          color: #007bff;
         }
+      }
     }
+  }
+
+  &__burger {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+
+    div {
+      width: 25px;
+      height: 3px;
+      background: #000;
+      margin: 4px 0;
+      transition: 0.3s;
+    }
+  }
 }
 
 @media (max-width: 768px) {
+  .navbar__list {
+    display: none;
+  }
 
-    .navbar__item {
-        // background: $light;
-        color: $light;
-    }
+  .navbar__icons {
+    display: none;
+  }
 
-    .navbar__list.show {
-        display: flex;
-    }
-
-    .navbar__icons {
-        display: none;
-        /* kichik ekranda text yashirilsin */
-    }
-
-    .navbar__burger {
-        display: flex;
-    }
-
+  .navbar__burger {
+    display: flex;
+  }
 }
-
-/* Burger animatsiyasi */
